src/test/ui/issues/40000-49999/issue-47377.rs
// ignore-tidy-tab
fn main() {
 	let b = "hello";
 	let _a = b + ", World!";
 	//~^ ERROR E0369
}
